--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "homepage": "https://github.com/s-n-1-0/markdown-it-remove#readme",
   "devDependencies": {
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "^17.0.5",
     "markdown-it": "^12.3.2",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "dependencies": {}
